deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-boar
  labels:
    app: data-boar
spec:
  type: ClusterIP
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
      name: http
  selector:
    app: data-boar
